<resources>
    <string name="app_name">DagDong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_yanzhengma">短信验证码登入</string>
    <string name="tv_reg">新用户注册</string>
    <string name="tv_forgetpwd">| 忘记密码</string>
    <string name="tv_wirte_pwd">请输入密码</string>
    <string name="tv_write_uname">用户名/邮箱/手机号</string>
    <string name="tv_xieyi_1">登入即代表您已同意</string>
    <string name="tv_xieyi_2">《京东隐私政策》</string>
    <string name="mine1">0</string>
    <string name="mine2">0.00</string>
    <string name="jingdou">京豆</string>
    <string name="youhui">优惠卷</string>
    <string name="baitiao">白条</string>
    <string name="jinku">京东小金库</string>
    <string name="guanzhu">店铺关注</string>
    <string name="shoucang">内容收藏</string>
    <string name="jilu">浏览记录</string>
    <string name="cart_tishi">天啦！你还未登录，快点我去登录吧~</string>
</resources>
