<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:background="@color/text_price_red"
    tools:context="com.example.myjd.view.activity.RegActivitity">
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/bar"
            layout="@layout/custom_actionbar" />
        <LinearLayout
            android:id="@+id/reg_lin"
            android:layout_marginTop="15dp"
            android:layout_below="@id/bar"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.example.myjd.widget.ClearEditText
                android:id="@+id/reg_edi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_write_uname"
                android:background="@null"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E6E6E6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <com.example.myjd.widget.ClearEditText
                    android:id="@+id/reg_edi_pwd"
                    android:layout_width="0dp"
                    android:password="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_wirte_pwd"/>
                <ImageView
                    android:id="@+id/reg_see_state"
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="20dp"
                    android:background="@drawable/eye_seletor"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E6E6E6"/>

            <Button
                android:id="@+id/reg_btn_reg"
                android:layout_below="@id/lin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/tv_reg"
                android:background="@drawable/shape_btn_login"
                android:textColor="@color/light_white"
                android:gravity="center"/>
        </LinearLayout>
        <ProgressBar
            android:layout_centerInParent="true"
            android:id="@+id/pb_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:background="#4000"
            android:paddingBottom="10dp"
            android:visibility="gone" />
    </RelativeLayout>
</FrameLayout>