<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="20dp"
    android:background="@color/white"
    tools:context="com.example.myjd.view.activity.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="50dp">
            <ImageView
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_width="30dp"
                android:layout_margin="15dp"
                android:src="@drawable/close"
                android:layout_height="30dp"/>
            <TextView
                android:layout_alignParentRight="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:text="客服"
                android:layout_margin="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/icon"
            android:layout_below="@id/top_bar"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="100dp">
            <ImageView
                android:layout_width="180dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:src="@drawable/dogjpg"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/lin"
            android:layout_marginTop="15dp"
            android:layout_below="@id/icon"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.example.myjd.widget.ClearEditText
                android:id="@+id/edi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_write_uname"
                android:background="@null"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E6E6E6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <com.example.myjd.widget.ClearEditText
                    android:id="@+id/edi_pwd"
                    android:layout_width="0dp"
                    android:password="true"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/tv_wirte_pwd"/>
                <ImageView
                    android:id="@+id/see_state"
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="20dp"
                    android:background="@drawable/eye_seletor"/>
                <TextView
                    android:id="@+id/forget_pwd"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tv_forgetpwd"/>
            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E6E6E6"/>

        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_below="@id/lin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="登录"
            android:background="@drawable/shape_btn_login"
            android:textColor="@color/light_white"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_yanzhengma"
            android:layout_marginTop="20dp"
            android:gravity="left|center_vertical"
            android:layout_below="@id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/comm_text_green"
            android:text="@string/tv_yanzhengma"/>
        <TextView
            android:id="@+id/tv_reg"
            android:layout_marginTop="20dp"
            android:gravity="right|center_vertical"
            android:layout_below="@id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/comm_text_green"
            android:text="@string/tv_reg"/>
        <!--其他分割线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_below="@id/tv_reg"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_height="20dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:gravity="center_vertical"
                    android:background="@color/text_sold_greay"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="其他方式登入"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:textColor="@color/text_sold_greay"
                    android:gravity="center_vertical"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_height="1dp"
                    android:background="@color/text_sold_greay"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/iv_wechat"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/passport_wechat_ic_normal"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="QQ登入"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/iv_qqchat"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:src="@drawable/passport_qq_ic_normal"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="微信登入"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_sold_greay"
                        android:text="@string/tv_xieyi_1"/>
                    <TextView
                        android:id="@+id/tv_login_xieyi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/comm_text_blue"
                        android:text="@string/tv_xieyi_2"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:layout_centerInParent="true"
        android:id="@+id/pb_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:background="#4000"
        android:paddingBottom="10dp"
        android:visibility="gone" />
</FrameLayout>